@@ -21,6 +21,8 @@
 
 #include <linux/pagemap.h>
 #include <linux/buffer_head.h>
+#include <linux/smp_lock.h>
+#include <linux/quotaops.h>
 
 #include "ntfs.h"
 #include "dir.h"
@@ -1924,5 +1926,94 @@ int ntfs_show_options(struct seq_file *sf, struct vfsmount *mnt)
 	}
 	seq_printf(sf, ",mft_zone_multiplier=%i", vol->mft_zone_multiplier);
 	return 0;
+}
+
+/**
+ * ntfs_truncate - called when the i_size of an ntfs inode is changed
+ * @vi:		inode for which the i_size was changed
+ *
+ * We don't support i_size changes yet.
+ *
+ * Called with ->i_sem held.
+ */
+void ntfs_truncate(struct inode *vi)
+{
+	// TODO: Implement...
+	ntfs_warning(vi->i_sb, "Eeek: i_size may have changed! If you see "
+			"this right after a message from "
+			"ntfs_{prepare,commit}_{,nonresident_}write() then "
+			"just ignore it. Otherwise it is bad news.");
+	// TODO: reset i_size now!
+	return;
+}
+
+/**
+ * ntfs_setattr - called from notify_change() when an attribute is being changed
+ * @dentry:	dentry whose attributes to change
+ * @attr:	structure describing the attributes and the changes
+ *
+ * We have to trap VFS attempts to truncate the file described by @dentry as
+ * soon as possible, because we do not implement changes in i_size yet. So we
+ * abort all i_size changes here.
+ *
+ * Called with ->i_sem held.
+ *
+ * Basically this is a copy of generic notify_change() and inode_setattr()
+ * functionality, except we intercept and abort changes in i_size.
+ */
+int ntfs_setattr(struct dentry *dentry, struct iattr *attr)
+{
+	struct inode *vi;
+	int err;
+	unsigned int ia_valid = attr->ia_valid;
+
+	vi = dentry->d_inode;
+
+	err = inode_change_ok(vi, attr);
+	if (err)
+		return err;
+
+	if ((ia_valid & ATTR_UID && attr->ia_uid != vi->i_uid) ||
+			(ia_valid & ATTR_GID && attr->ia_gid != vi->i_gid)) {
+		err = DQUOT_TRANSFER(vi, attr) ? -EDQUOT : 0;
+		if (err)
+			return err;
+	}
+
+	lock_kernel();
+
+	if (ia_valid & ATTR_SIZE) {
+		ntfs_error(vi->i_sb, "Changes in i_size are not supported "
+				"yet. Sorry.");
+		// TODO: Implement...
+		// err = vmtruncate(vi, attr->ia_size);
+		err = -EOPNOTSUPP;
+		if (err)
+			goto trunc_err;
+	}
+
+	if (ia_valid & ATTR_UID)
+		vi->i_uid = attr->ia_uid;
+	if (ia_valid & ATTR_GID)
+		vi->i_gid = attr->ia_gid;
+	if (ia_valid & ATTR_ATIME)
+		vi->i_atime = attr->ia_atime;
+	if (ia_valid & ATTR_MTIME)
+		vi->i_mtime = attr->ia_mtime;
+	if (ia_valid & ATTR_CTIME)
+		vi->i_ctime = attr->ia_ctime;
+	if (ia_valid & ATTR_MODE) {
+		vi->i_mode = attr->ia_mode;
+		if (!in_group_p(vi->i_gid) &&
+				!capable(CAP_FSETID))
+			vi->i_mode &= ~S_ISGID;
+	}
+	mark_inode_dirty(vi);
+
+trunc_err:
+
+	unlock_kernel();
+
+	return err;
 }
 
